syntax="proto3";

package pb;

message HelloRequest {
  string name = 1;
  int64 age = 2;
}

message HelloResponse {
  string response = 1;
}

message SendMessage {
  string message = 1;
}

message RecvMessage {
  string message = 1;
}

service Hello {
  rpc SayHi(HelloRequest)returns(HelloResponse);
  rpc GetMessage(SendMessage)returns(RecvMessage);
}